--- a/AoMobileApp/package.json
+++ b/AoMobileApp/package.json
@@ -9,15 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
+    "@expo/metro-runtime": "^3.2.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
-    "expo": "~50.0.17",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.8",
+    "expo-status-bar": "^1.12.1",
     "ios": "^0.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "^0.74.1",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0"
   },
