created eas develpment build for testing Oauth locally

--- a/AoMobileApp/app.json
+++ b/AoMobileApp/app.json
@@ -15,7 +15,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.lmart.AoMobileApp"
     },
     "android": {
       "adaptiveIcon": {
@@ -25,6 +26,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "993a9ca5-ea20-43ce-8a3c-3c187e582efd"
+      }
     }
   }
 }
