--- a/AoMobileApp/package.json
+++ b/AoMobileApp/package.json
@@ -12,6 +12,8 @@
     "@expo/metro-runtime": "^3.2.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "expo": "^51.0.8",
     "expo-status-bar": "^1.12.1",
     "ios": "^0.0.1",
