--- a/AoMobileApp/package.json
+++ b/AoMobileApp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aomobileapp",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "node_modules/expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -13,7 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "expo": "^51.0.8",
-    "expo-status-bar": "^1.12.1",
+    "expo-status-bar": "~1.12.1",
     "ios": "^0.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -21,7 +21,13 @@
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
     "expo-auth-session": "~5.5.2",
-    "expo-crypto": "~13.0.2"
+    "expo-crypto": "~13.0.2",
+    "expo-web-browser": "~13.0.3",
+    "expo-router": "~3.5.14",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "expo-linking": "~6.3.1",
+    "expo-constants": "~16.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
