--- a/AoMobileApp/package.json
+++ b/AoMobileApp/package.json
@@ -12,24 +12,24 @@
     "@expo/metro-runtime": "^3.2.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
-    "expo": "^51.0.8",
+    "@types/react": "~18.2.79",
+    "expo": "^51.0.16",
+    "expo-auth-session": "~5.5.2",
+    "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.17",
     "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
     "ios": "^0.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.1",
-    "react-native-web": "~0.19.6",
-    "react-navigation": "^5.0.0",
-    "expo-auth-session": "~5.5.2",
-    "expo-crypto": "~13.0.2",
-    "expo-web-browser": "~13.0.3",
-    "expo-router": "~3.5.14",
+    "react-native": "0.74.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "expo-linking": "~6.3.1",
-    "expo-constants": "~16.0.1",
-    "typescript": "~5.3.3",
-    "@types/react": "~18.2.79"
+    "react-native-web": "~0.19.6",
+    "react-navigation": "^5.0.0",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
