added logo to header and splash screen

--- a/AoMobileApp/package.json
+++ b/AoMobileApp/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
