--- a/AoMobileApp/app.json
+++ b/AoMobileApp/app.json
@@ -8,7 +8,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/ao-logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
