--- a/AoMobileApp/package.json
+++ b/AoMobileApp/package.json
@@ -10,29 +10,34 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.2.1",
-    "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/native": "^6.1.17",
-    "@types/react": "~18.2.79",
-    "expo": "^51.0.16",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@types/react": "~18.3.3",
+    "aomobileapp": "file:",
+    "expo": "^51.0.24",
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.17",
+    "expo-router": "~3.5.20",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
     "ios": "^0.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.6",
+    "react-native": "0.74.4",
+    "react-native-safe-area-context": "4.10.8",
+    "react-native-screens": "3.33.0",
+    "react-native-video": "^6.4.4",
+    "react-native-web": "~0.19.12",
+    "react-native-web-webview": "^1.0.2",
+    "react-native-webview": "13.8.6",
+    "react-native-youtube-iframe": "^2.3.0",
     "react-navigation": "^5.0.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2"
   },
   "private": true
 }
