--- a/AoMobileApp/app.json
+++ b/AoMobileApp/app.json
@@ -23,7 +23,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.lmart.AoMobileApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
