--- a/AoMobileApp/eas.json
+++ b/AoMobileApp/eas.json
@@ -1,10 +1,10 @@
 {
   "cli": {
-    "version": ">= 9.0.7"
+    "version": ">= 10.1.1"
   },
   "build": {
     "development": {
-      "developmentClient": true,
+      "developmentClient": false,
       "distribution": "internal"
     },
     "preview": {
@@ -19,4 +19,3 @@
     "production": {}
   }
 }
-
