--- a/AoMobileApp/package.json
+++ b/AoMobileApp/package.json
@@ -13,10 +13,12 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@types/react": "~18.2.79",
+    "aomobileapp": "file:",
     "expo": "^51.0.16",
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
+    "expo-dev-client": "~4.0.20",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.17",
     "expo-status-bar": "~1.12.1",
@@ -28,6 +30,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.6",
+    "react-native-webview": "^13.11.1",
     "react-navigation": "^5.0.0",
     "typescript": "~5.3.3"
   },
